[project]
name = "market-data"
version = "0.1.0"
description = ""
authors = [
    {name = "asim09",email = "khan.asim87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "websockets (>=16.0,<17.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-socketio[client] (>=5.16.0,<6.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "pandas (>=3.0.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "market_data", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
